--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@
 
 .footer-social{
     margin-bottom: 130px;
+    display: flex;
 }
 
 .Subscribe {
@@ -230,3 +231,35 @@ input{
     height:35px;
     width: 100%;
 }
+
+
+nav {
+    background-color: #fd6e0a;
+    padding: 10px;
+  }
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+
+  }
+  
+  a:hover {
+    background-color: rgb(19, 18, 18);
+    color: white;
+  }
